@startuml admin_class

skinparam defaultFontSize 18

hide empty members

enum UserRole {
  Admin
  Client
  Worker
}

class DB {
  + bool create_user(User)
  + bool update_user_name(name)
  + bool update_user_login(login)
  + bool update_user_role(role)
  + bool update_user_password(password)
  + int get_client_orders_count(user_id)
  + int get_worker_orders_count(user_id)
  + User get_user(login)
  + User get_user(user_id)
  + List[User] get_users()
  + delete_user(user_id)
}
class AuthWindow {
  + User check_auth(login, password)
  + on_auth_button_clicked()
  + open_user_window(role, user_id)
}
 
Entity User

class AdminAreaWindow {
  + AdminAreaWindow(user_id)
  + on_add_user_button_clicked()
  + on_edit_user_button_clicked()
  + on_exit_button_clicked()
}

class ListUsersWindow {
  + ListUsersWindow(user_id)
  + on_go_area_button_clicked()
  + on_delete_button_clicked()
  + on_edit_button_clicked()
}

class EditUserWindow {
  + EditUserWindow(user_id, edited_user_id)
  + validate()
  + validate(name, login, password, role)
  + check_changes(name, login, password, role)
  + update(name, login, password, role)
  + on_go_area_button_clicked()
  + on_add_button_clicked()
  --
  * edited_user
}

class AddUserWindow {
  + AddUserWindow(user_id)
  + validate()
  + validate(name, login, password, role)
  + User prepare_data()
  + string generate_login(name)
  + on_go_area_button_clicked()
  + on_add_button_clicked()
}

class ConfirmationDialog {
  + accept()
  + reject()
}

AuthWindow --> DB
DB --> User
AuthWindow --> UserRole
AuthWindow <--> AdminAreaWindow
AdminAreaWindow <--> ListUsersWindow
AdminAreaWindow <--> AddUserWindow
EditUserWindow --> AdminAreaWindow
ListUsersWindow --> EditUserWindow
ListUsersWindow <--> ConfirmationDialog


@enduml